# variopt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/scripts/: smoke_imports.py
.github/workflows/: canary.yml  ci.yml  docs.yml  pre-commit-autoupdate.yml
.tickets/: pn-0a1g.md  pn-0n2b.md  pn-4u63.md  pn-5te8.md  pn-68wn.md  pn-6xcl.md  pn-862m.md  pn-8riq.md  pn-9euu.md  pn-cn4y.md  pn-crz0.md  pn-fo46.md  pn-gstx.md  pn-h0tc.md  pn-kaxe.md  pn-knf4.md  pn-phl2.md  pn-q5ek.md  pn-q7df.md  pn-qiwp.md  pn-qu44.md
docs/: index.md
docs/concepts/: candidate-refinement.md  csa.md  index.md  local-search.md  optimization-model.md  population-algorithms.md  spaces-and-candidates.md  study-and-execution-models.md
docs/getting-started/: installation.md  introduction.md  quickstart.md
docs/guides/: canonical-usage-patterns.md  choose-an-evaluator.md  choose-an-optimizer.md  customize-optimizer-profile.md  index.md  local-optimization-methods.md
docs/reference/: api.md  checkpointing.md  glossary.md  index.md  presets-and-contracts.md  stability.md
docs/tutorials/: first-optimization.md  index.md  structured-spaces.md
src/variopt/: __init__.py  direction.py  distance.py  evaluation_pipeline.py  execution.py  generic_runtime.py  json_types.py  kernel.py  objective.py  operators.py  outcomes.py  problem.py  randomness.py  typevars.py
tests/: __init__.py  conformance.py  csa_support.py  numeric_support.py  problem_artifact_support.py  release_support.py  study_support.py
tests/core/: __init__.py  (+5 more)
(+272 files in other folders)
