[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/docs",
  "/mkdocs.yml",
  "/pyproject.toml",
  "/src",
]
exclude = [
  "/dist",
  "/tests",
  "/uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/variopt"]

[project]
name = "variopt"
version = "0.1.0"
description = "Typed optimization toolkit for structured search spaces."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "joblib>=1.4.0",
  "numpy>=1.23.5",
  "scipy>=1.10.0",
  "typing_extensions>=4.12.0",
]

[project.optional-dependencies]
test = [
  "basedpyright>=1.20.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "tomli>=2.0.0",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.0",
  "mkdocstrings>=0.27.0",
  "mkdocstrings-python>=1.12.2",
]
mpi = [
  "mpi4py>=3.1",
]

[tool.ruff]
target-version = "py310"
extend-exclude = [
  ".venv",
]

[tool.ruff.lint]
extend-select = [
  "I",
  "UP",
]

[tool.basedpyright]
pythonVersion = "3.10"
reportMissingModuleSource = false
include = [
  "src",
  "tests",
]
exclude = [
  "**/__pycache__",
  ".git",
  ".venv",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
  "tests",
]
python_classes = "*Tests"
python_functions = "test_*"
